--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,33 +3,38 @@
 
 <body>
 
-<% if @book.errors.any? %>
+  
+ <ol>   
+ <% if @book.errors.any? %>
    <%= @book.errors.count %>errors prohibited this book from being saved:
    <ul>
     <% @book.errors.full_messages.each do |message| %>
-      <li class="error_message"><%= message %></li>
+      <li><%= message %></li>
     <% end %>
    </ul>
  <% end %>
+ </ol>
 
 
-
-<%= form_with model: @book do |f| %>
+ <%= form_with model: @book do |f| %>
  
-   <h4>Title</h4>
-   <%= f.text_field :title %>
+ 
+    <h4>Title</h4>
+    <%= f.text_field :title %>
 	
-   <h4>Body</h4>
-   <%= f.text_area :body %>
+    <h4>Body</h4>
+    <%= f.text_area :body %>
    
 	
-   <%= f.submit "Update Book" %>
+    <%= f.submit "Update Book" %>
    
    
-   <p>
-   <%= link_to "Show",book_path(@book.id) %> | <%= link_to "Back",books_path %>
-   </p>
+    <p>
+    <%= link_to "Show",book_path(@book.id) %> | <%= link_to "Back",books_path %>
+    </p>
 
+   
+ 
    
  <% end %>
  
