--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -42,16 +42,14 @@
 
 <h2>New book</h2>
 
-
-<% if @book.errors.any? %>
+ <% if @book.errors.any? %>
    <%= @book.errors.count %>errors prohibited this book from being saved:
-   <ul>
+  <ul>
     <% @book.errors.full_messages.each do |message| %>
-      <li class="error_message"><%= message %></li>
-    <% end %>
-   </ul>
+     <li><%= message %></li>
+   <% end %>
+  </ul>
  <% end %>
-
 
 
 
@@ -67,3 +65,4 @@
    <%= f.submit "Create Book" %>
    
  <% end %>
+
